--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,430 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root{ 
+  --blue : #03061A;
+  --panko: #EDCDA3;
+  --white: #FFFFFF;
+  }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+  * {
+    margin: 0;
+    padding: 0;
+  }
+/* -------------------------- */
+  /* STAR BACKGROUND */
+/* -------------------------- */
+.star__body{
+  margin: 0;
+  padding: 0;
+  background-color: var(--blue);
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
+
+.star {
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: rgba(var(--panko),0.8);
+  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 4px var(--white);
+  animation: glow 5s infinite; 
+}
+
+.star.star--big {
+  width: 9px;
+  height: 9px;
+  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 4px var(--white);
+}
+
+.star.star--medium {
+  width: 6px;
+  height: 6px;
+  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 4px var(--white);
+}
+
+.comet {
+  width: 6px;
+  height: 6px;
+  background-color: rgba(var(--white),0.6);
+  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 8px rgba(var(--white),0.6);
+  top: 50%;
+  right: 50%;
+  opacity: 0.3;
+  transform: rotate(-45deg) translate(0,-500px);
+  animation: comet 6s infinite;
+}
+
+.comet:after{
+  content: '';
+  width: 20vw;
+  height: 6px;
+  border-radius: 50%;
+  background-color: rgba(var(--white),0.1);
+  box-shadow: 0 0 20px rgba(var(--panko),0.4);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+@keyframes glow {
+  0% {
+      opacity: 0.9;
+  }
+  50% {
+     opacity: 0.2;
+  }
+  100% {
+      opacity: 0.9;
+  }
+}
+
+@keyframes comet {
+  0% {
+      transform: rotate(-45deg) translateX(0);
+      opacity: 0.3;
+  }
+
+  10% {
+      opacity: 1;
+  }
+  20% {
+      transform: rotate(-45deg) translateX(-100vw);
+      opacity: 0;
+  }
+  100% {
+      transform: rotate(-45deg) translateX(-100vw);
+      opacity: 0;
+  }
+ 
+}
+
+
+
+
+
+
+
+
+
+
+
+/* -------------------------- */
+    /* NAME  */
+/* -------------------------- */
+.name-container {
+  height: 100vh;
+}
+.name{
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  color: var(--white);
+  scroll-behavior: smooth;
+  text-align: center;
+}
+.name--svg{
+  display: flex;
+  justify-content: center;
+  margin: 0px 150px;
+  align-items: center;
+}
+.name--svg svg {
+  padding: 10px;
+}
+
+.name--svg svg:hover{
+ transform: rotateY(360deg);
+}
+
+.name--font{
+  font-family: 'Fredoka One',cursive;
+  font-size: 84px;
+  font-weight: 400;
+}
+
+@media (max-width:900px) {
+  .name--font {
+      font-family: 'Fredoka One',cursive;
+      font-size: 48px;
+  }
+  .name--svg svg {
+      padding: 10px;
+      width: 60px;
+      height: 60px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* --------------------------- */
+/* Project Cards */
+/* --------------------------- */
+
+.container {
+  margin: 0 auto;
+  position: relative;
+  padding: 4%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+}
+
+.card {
+  width: 92%;
+  max-width: 440px;
+  height: 50vh;
+  margin-left: 20px;
+  margin-right: 20px;
+  position: relative;
+  background: ivory;
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 60px;
+}
+
+.border {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 6px;
+  border: 1px solid #fff;
+  opacity: 0.5;
+  left: -6px;
+  top: -6px;
+}
+
+.card > button {
+  position: relative;
+  display: block;
+  padding: 20px;
+  margin-top: 5px;
+  width: 65%;
+  height: 40px;
+  border: 2px solid #d2bdff;
+  color: #d2bdff;
+  background-color: #03061A;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'Fredoka One',cursive;
+}
+.card > button::after{
+  transform: translate(-50%);
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transition: all 0.1s linear;
+}
+
+.github_button::after{
+  content: "GITHUB";
+}
+
+.project_button::after{
+  content: "PROJECT";
+  margin-left: 5px;
+}
+
+.card > button::before {
+  content: "";
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  margin: 10px;
+  background: #d2bdff;
+  box-shadow: 0px 0px 10px 3px #0ff;
+  margin-left: -60px;
+  margin-top: 0px;
+  opacity: 0;
+  transition: all 0.1s linear;
+  border-radius: 100%;
+}
+/* s */
+.card > button:hover::before {
+  opacity: 1;
+  animation: star 2s linear infinite;
+}
+.card > button:hover {
+  text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 20px #82bedc, 0 0 30px #82bedc, 0 0 40px #82bedc, 0 0 50px #82bedc, 0 0 60px #82bedc;
+}
+
+.card > button:active {
+  background-color: #fff;
+  color: #03061A;;
+  transition: all .1s linear;
+}
+.card > img {
+  width: 90%;
+  min-height: 264px;
+  position: absolute;
+  top: -6%;
+  left: -6%;
+}
+
+.card-color-0 {
+  background-color: ivory;
+}
+
+.card-color-1 {
+  background: rgb(231,27,13);
+  background: linear-gradient(90deg, rgba(231,27,13,1) 0%, rgba(255,255,255,1) 73%);
+}
+
+.card-color-2 {
+  background-color: ivory;
+}
+
+.card-color-3 {
+  background-color: ivory;
+}
+
+.card {
+  transition: opacity 200ms linear 320ms, transform 200ms ease-out 320ms;
+}
+
+.border {
+  transition: opacity 200ms linear, transform 200ms ease-out;
+}
+
+.card img {
+  transition: opacity 200ms linear 0ms, transform 200ms ease-in 0ms;
+  border-radius: 20px 0;
+}
+
+.card button {
+  transform: translate3d(-12%, 250px, 0px);  
+  transition: opacity 200ms linear 120ms, transform 200ms ease-in 120ms;
+}
+
+/* Clicked card */
+.card.clicked img {
+  transform: translate3d(0px, -40px, 0px);
+  opacity: 0;
+}
+
+.card.clicked .border {
+  opacity: 0;
+  transform: scale(1.3);
+}
+
+.card.out, .card.out img {
+  transform: translate3d(0px, -40px, 0px);
+  opacity: 0;
+}
+
+.card.out h1, .card.clicked h1 {
+  transform: translate3d(20%, -40px, 0px);
+  opacity: 0;
+}
+
+/* 
+** Media Queries
+*/
+
+@media screen and (max-width: 600px) {
+  .card-column {
+    width: 90%;
+  }
+  
+  .column-1 {
+    padding-top: 0px;
+  }
+  
+  .open-content img {
+    margin-top: 40px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* --------------------------- */
+/* About me */
+/* --------------------------- */
+.Aboutme__main {
+  
+  height: 100vh;
+}
+
+.Aboutme__header {
+  font-size: 64px;
+  font-family: 'Fredoka One',cursive;
+  text-transform: capitalize;
+  font-weight: 100;
+  padding: 10px;
+  color: var(--white);
+  text-align: center;
+}
+
+.Aboutme__techstack {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+  flex-direction: row;
+  flex-basis: content;
+}
+
+.Aboutme__techstack > img {
+  padding: auto;
+  width: 80px;
+  margin: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* --------------------------- */
+/* Tweets*/
+/* --------------------------- */
+
+.Twitter__main {
+  background-color: #fff;
+  height: 100vh;
+}
+
+
+
+
+
+
