--- a/src/index.scss
+++ b/src/index.scss
@@ -1,23 +1,60 @@
+@import url('https://fonts.googleapis.com/css?family=Figtree:700|Figtree:400');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-:root{ 
-  --blue : #03061A;
-  --panko: #EDCDA3;
-  --white: #FFFFFF;
-  }
 
-  * {
-    margin: 0;
-    padding: 0;
-  }
-/* -------------------------- */
-  /* STAR BACKGROUND */
-/* -------------------------- */
-.star__body{
+:root {
+  --text: #031c1c;
+  --background: #fcfdfd;
+  --primary: #1ce5e6;
+  --secondary: #847ef1;
+  --accent: #edd84d;
+}
+
+body {
+  font-family: 'Figtree';
+  font-weight: 400;
+  color: var(--text);
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Figtree';
+  font-weight: 700;
+}
+
+
+html {font-size: 100%;} /* 16px */
+
+h1 {font-size: 4.210rem; /* 67.36px */}
+
+h2 {font-size: 3.158rem; /* 50.56px */}
+
+h3 {font-size: 2.369rem; /* 37.92px */}
+
+h4 {font-size: 1.777rem; /* 28.48px */}
+
+h5 {font-size: 1.333rem; /* 21.28px */}
+
+small {font-size: 0.750rem; /* 12px */}
+
+.theme-dark {
+  --text: #e3fcfc;
+  --background: #020303;
+  --primary: #19e1e1;
+  --secondary: #140e81;
+  --accent: #b09b11;
+}
+* {
   margin: 0;
   padding: 0;
-  background-color: var(--blue);
+}
+/* -------------------------- */
+/* STAR BACKGROUND */
+/* -------------------------- */
+.star__body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--background);
   height: 100vh;
   width: 100%;
   overflow: hidden;
@@ -28,104 +65,97 @@
   height: 4px;
   border-radius: 50%;
   position: absolute;
-  background-color: rgba(var(--panko),0.8);
-  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 4px var(--white);
-  animation: glow 5s infinite; 
+  background-color: rgba(var(--secondary), 0.8);
+  box-shadow: 0 0 40px 0 var(--secondary), 0 0 20px 0 var(--primary),
+    inset 0 0 4px var(--primary);
+  animation: glow 5s infinite;
 }
 
 .star.star--big {
   width: 9px;
   height: 9px;
-  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 4px var(--white);
+  box-shadow: 0 0 40px 0 var(--secondary), 0 0 20px 0 var(--primary),
+    inset 0 0 4px var(--primary);
 }
 
 .star.star--medium {
   width: 6px;
   height: 6px;
-  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 4px var(--white);
+  box-shadow: 0 0 40px 0 var(--secondary), 0 0 20px 0 var(--primary),
+    inset 0 0 4px var(--primary);
 }
 
 .comet {
   width: 6px;
   height: 6px;
-  background-color: rgba(var(--white),0.6);
-  box-shadow: 0 0 40px 0 var(--panko), 0 0 20px 0 var(--white), inset 0 0 8px rgba(var(--white),0.6);
+  background-color: rgba(var(--primary), 0.6);
+  box-shadow: 0 0 40px 0 var(--secondary), 0 0 20px 0 var(--primary),
+    inset 0 0 8px rgba(var(--primary), 0.6);
   top: 50%;
   right: 50%;
   opacity: 0.3;
-  transform: rotate(-45deg) translate(0,-500px);
+  transform: rotate(-45deg) translate(0, -500px);
   animation: comet 6s infinite;
 }
 
-.comet:after{
+.comet:after {
   content: '';
   width: 20vw;
   height: 6px;
   border-radius: 50%;
-  background-color: rgba(var(--white),0.1);
-  box-shadow: 0 0 20px rgba(var(--panko),0.4);
+  background-color: rgba(var(--primary), 0.1);
+  box-shadow: 0 0 20px rgba(var(--secondary), 0.4);
   position: absolute;
   bottom: 0;
   left: 0;
 }
 @keyframes glow {
   0% {
-      opacity: 0.9;
+    opacity: 0.9;
   }
   50% {
-     opacity: 0.2;
+    opacity: 0.2;
   }
   100% {
-      opacity: 0.9;
+    opacity: 0.9;
   }
 }
 
 @keyframes comet {
   0% {
-      transform: rotate(-45deg) translateX(0);
-      opacity: 0.3;
+    transform: rotate(-45deg) translateX(0);
+    opacity: 0.3;
   }
 
   10% {
-      opacity: 1;
+    opacity: 1;
   }
   20% {
-      transform: rotate(-45deg) translateX(-100vw);
-      opacity: 0;
+    transform: rotate(-45deg) translateX(-100vw);
+    opacity: 0;
   }
   100% {
-      transform: rotate(-45deg) translateX(-100vw);
-      opacity: 0;
+    transform: rotate(-45deg) translateX(-100vw);
+    opacity: 0;
   }
- 
 }
 
-
-
-
-
-
-
-
-
-
-
 /* -------------------------- */
-    /* NAME  */
+/* NAME  */
 /* -------------------------- */
 .name-container {
   height: 100vh;
 }
-.name{
+.name {
   top: 50%;
   left: 50%;
   position: absolute;
-  transform: translate(-50%,-50%);
-  color: var(--white);
+  transform: translate(-50%, -50%);
+  color: var(--text);
   scroll-behavior: smooth;
   text-align: center;
 }
-.name--svg{
+.name--svg {
   display: flex;
   justify-content: center;
   margin: 0px 150px;
@@ -135,46 +165,25 @@
   padding: 10px;
 }
 
-.name--svg svg:hover{
- transform: rotateY(360deg);
+.name--svg svg:hover {
+  transform: rotateY(360deg);
 }
 
-.name--font{
-  font-family: 'Fredoka One',cursive;
+.name--font {
   font-size: 84px;
   font-weight: 400;
 }
 
-@media (max-width:900px) {
+@media (max-width: 900px) {
   .name--font {
-      font-family: 'Fredoka One',cursive;
-      font-size: 48px;
+    font-size: 48px;
   }
   .name--svg svg {
-      padding: 10px;
-      width: 60px;
-      height: 60px;
+    padding: 10px;
+    width: 60px;
+    height: 60px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* --------------------------- */
 /* Project Cards */
@@ -224,12 +233,11 @@
   height: 40px;
   border: 2px solid #d2bdff;
   color: #d2bdff;
-  background-color: #03061A;
+  background-color: #03061a;
   border-radius: 4px;
   cursor: pointer;
-  font-family: 'Fredoka One',cursive;
 }
-.card > button::after{
+.card > button::after {
   transform: translate(-50%);
   position: absolute;
   top: 35%;
@@ -237,17 +245,17 @@
   transition: all 0.1s linear;
 }
 
-.github_button::after{
-  content: "GITHUB";
+.github_button::after {
+  content: 'GITHUB';
 }
 
-.project_button::after{
-  content: "PROJECT";
+.project_button::after {
+  content: 'PROJECT';
   margin-left: 5px;
 }
 
 .card > button::before {
-  content: "";
+  content: '';
   position: absolute;
   height: 10px;
   width: 10px;
@@ -266,13 +274,14 @@
   animation: star 2s linear infinite;
 }
 .card > button:hover {
-  text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 20px #82bedc, 0 0 30px #82bedc, 0 0 40px #82bedc, 0 0 50px #82bedc, 0 0 60px #82bedc;
+  text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 20px #82bedc, 0 0 30px #82bedc,
+    0 0 40px #82bedc, 0 0 50px #82bedc, 0 0 60px #82bedc;
 }
 
 .card > button:active {
   background-color: #fff;
-  color: #03061A;;
-  transition: all .1s linear;
+  color: #03061a;
+  transition: all 0.1s linear;
 }
 .card > img {
   width: 90%;
@@ -287,8 +296,12 @@
 }
 
 .card-color-1 {
-  background: rgb(231,27,13);
-  background: linear-gradient(90deg, rgba(231,27,13,1) 0%, rgba(255,255,255,1) 73%);
+  background: rgb(231, 27, 13);
+  background: linear-gradient(
+    90deg,
+    rgba(231, 27, 13, 1) 0%,
+    rgba(255, 255, 255, 1) 73%
+  );
 }
 
 .card-color-2 {
@@ -313,7 +326,7 @@
 }
 
 .card button {
-  transform: translate3d(-12%, 250px, 0px);  
+  transform: translate3d(-12%, 250px, 0px);
   transition: opacity 200ms linear 120ms, transform 200ms ease-in 120ms;
 }
 
@@ -328,12 +341,14 @@
   transform: scale(1.3);
 }
 
-.card.out, .card.out img {
+.card.out,
+.card.out img {
   transform: translate3d(0px, -40px, 0px);
   opacity: 0;
 }
 
-.card.out h1, .card.clicked h1 {
+.card.out h1,
+.card.clicked h1 {
   transform: translate3d(20%, -40px, 0px);
   opacity: 0;
 }
@@ -346,46 +361,29 @@
   .card-column {
     width: 90%;
   }
-  
+
   .column-1 {
     padding-top: 0px;
   }
-  
+
   .open-content img {
     margin-top: 40px;
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* --------------------------- */
 /* About me */
 /* --------------------------- */
 .Aboutme__main {
-  
   height: 100vh;
 }
 
 .Aboutme__header {
   font-size: 64px;
-  font-family: 'Fredoka One',cursive;
   text-transform: capitalize;
   font-weight: 100;
   padding: 10px;
-  color: var(--white);
+  color: var(--primary);
   text-align: center;
 }
 
@@ -404,16 +402,6 @@
   margin: 20px;
 }
 
-
-
-
-
-
-
-
-
-
-
 /* --------------------------- */
 /* Tweets*/
 /* --------------------------- */
@@ -422,9 +410,3 @@
   background-color: #fff;
   height: 100vh;
 }
-
-
-
-
-
-
